# adventofcode2022

./: .gitignore  Cargo.toml  bench.sh  new.sh
.github/workflows/: test.yaml
day01/: Cargo.toml
day01/benches/: benchmark.rs
day01/src/: lib.rs  main.rs  part2.rs
day02/: Cargo.toml
day02/benches/: benchmark.rs
day02/src/: lib.rs  main.rs  part1.rs  part2.rs
day03/: Cargo.toml
day03/benches/: benchmark.rs
day03/src/: main.rs
day04/: Cargo.toml
day04/benches/: benchmark.rs
day04/src/: main.rs  part1.rs
day05/: Cargo.toml
day05/benches/: benchmark.rs
day05/src/: main.rs  part1.rs
day06/: Cargo.toml
day06/benches/: benchmark.rs
day06/src/: main.rs  part1.rs  part2.rs
day07/: Cargo.toml
day07/benches/: benchmark.rs
day07/src/: main.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/benches/: benchmark.rs
day08/src/: common.rs  main.rs
day09/: Cargo.toml
day09/benches/: benchmark.rs
day09/src/: main.rs  (+1 more)
day1/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day11/benches/: benchmark.rs
day11/src/: common.rs  lib.rs  main.rs  part1.rs  part2.rs
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day2/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
day25/: Cargo.toml
day3/: Cargo.toml
day4/: Cargo.toml
day5/: Cargo.toml
day6/: Cargo.toml
day7/: Cargo.toml
day8/: Cargo.toml
day9/: Cargo.toml
infi/: Cargo.toml
shared/: Cargo.toml
template/: Cargo.toml
(+129 files in other folders)
