[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false
doctest = false

[[bin]]
name = "day11"
bench = false
test = false

[dependencies]
shared = { path = "../shared" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
